fix: Make the mini portals resizable again
- The resize slider was hidden by the z-index changes that were made to fix issues with z-fighting between the map portals and the grid portals.

--- a/src/aux-server/aux-web/aux-player/PlayerGameView/PlayerGameView.css
+++ b/src/aux-server/aux-web/aux-player/PlayerGameView/PlayerGameView.css
@@ -125,6 +125,8 @@ html.ar-app .webxr-sessions canvas {
     overscroll-behavior: none;
     overflow-y: hidden;
     touch-action: none;
+
+    z-index: 2;
 }
 
 .md-badge.md-primary.menu-badge {
